hphp/hack/test/package_v2/package_access/ill_formed_crosspackage_attr.php
<?hh
// package pkg1
<<__EntryPoint, __CrossPackage(123)>> // parse error
function test() : void {}
